[package]
name = "digital-ocean-droplet-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
directories = "5"
libc = "0.2"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
